--- a/src/index.css
+++ b/src/index.css
@@ -18,23 +18,24 @@ code {
 }
 .meindiv{
   position:absolute;
-  top:40px;
+  top:20px;
  width:100%;
 /*  background-color: red; */
   z-index:10;
   padding:0px;
 }
 
-
+/* Happy */
 .meindiv2 {
   height:50px;
   display: flex;
   justify-content: center;
+  margin-bottom: 40px;
  /* align-items: center; */
  
 }
 
-
+/* Birthday */
 .meindiv3 {
   height:10px;
    top:0px;
@@ -43,6 +44,7 @@ code {
   display: flex;
   justify-content: center;
 }
+/* Sarah */
 .meindiv4 {
 
    top:0px;
@@ -83,10 +85,7 @@ position:absolute;
 
 h1{
   font-family:'Lobster Two', Calibri, 'Trebuchet MS', sans-serif;
- /* color:rgb(111, 129, 145);*/
-   
-  color:rgba(255, 143, 1,0.9); 
-  
+  color:rgba(255, 143, 1,1.0); 
   font-size: 3rem;
   display: flex;
   justify-content: center;
@@ -95,18 +94,15 @@ h1{
 }
   @media only screen and (max-width: 660px) {
    h1 {
-    font-size: 2.0rem;
+    font-size: 2.4rem;
     } }
 
 
  h2 {
 	font-family: 'Lobster Two', Calibri, 'Trebuchet MS', sans-serif;
-  padding-top:0.0rem;
-  font-size: 4.5rem;
-  
-  color:rgba(255, 5, 122, 1); 
-   
-  
+  padding-top:0.3rem;
+  font-size: 5.4rem;
+  color:rgba(255, 5, 122, 0.8); 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -115,7 +111,7 @@ h1{
 @media only screen and (max-width: 660px) {
   h2 {
     padding-top:0.3rem;
-    font-size: 3rem;
+    font-size: 3.6rem;
    } }
 
 
@@ -125,11 +121,11 @@ h1{
     /* color:rgba(20, 11, 95, 0.5); */
      color:rgb(255, 255, 255); 
     padding-top:2.0rem;
-    font-size: 2.7rem;
+    font-size: 3.3rem;
    }
    @media only screen and (max-width: 660px) {
     h3 {
-      font-size:1.8rem;
+      font-size:2.2rem;
      } }
   .audio {
     opacity:0.5;
